# Cargo.toml
#
# Copyright (C) 2016 Zheguang Zhao
# All rights reserved.
#
# This software may be modified and distributed under the terms
# of the BSD license.  See the LICENSE file for details.

[package]
name = "rtree"
version = "0.1.0"
authors = ["Zheguang Zhao <sam@cs.brown.edu>"]

[dependencies]
rand = "0.3"
